Update 01. init source code.md

--- a/readme/01. init source code.md
+++ b/readme/01. init source code.md
@@ -22,7 +22,7 @@ Bạn chỉnh sửa file `package.json` lại 1 tí
 
 "scripts": {
   "build": "tsc",
-  "start": "node ./dist/index.js",
+  "start": "node ./build/index.js",
   "dev": "nodemon --watch ./src/"
 }
 ```
@@ -30,7 +30,7 @@ Bạn chỉnh sửa file `package.json` lại 1 tí
 ## Thêm ./.gitignore file
 ```
 node_modules
-dist
+.build
 .env
 ```
 
