Update 01. init source code.md

--- a/readme/01. init source code.md
+++ b/readme/01. init source code.md
@@ -253,7 +253,7 @@ export default corsOptions;
 ```
 import { JsonController, Get } from 'routing-controllers';
 
-@JsonController('/')
+@JsonController('')
 export class HelloworldController {
 
   @Get('/')
